# WaterAgeNeutralHabitats

./: .flake8  .gitignore  CNAME  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml  gh-pages.yml
cert/: docker-compose.yml
data/: timeseries.csv
data/raw/: README.md
data/sample/: Evap0000365.asc  Evap0000365.geojson  Slabs.asc
frontend/: Dockerfile  package-lock.json  package.json  vue.config.js
frontend/public/: aqi-beijing.json  demoScatterplot.json  keyDates.json
frontend/src/: App.vue  main.js
frontend/src/components/: Colormap.vue  Controls.vue  InfoTooltip.vue  IntroStepper.vue  LandmarksControl.vue  Map.vue  Maps.vue  MapsHeader.vue  Scatterplot.vue  Selection.vue  TimeSeries.vue  Timeseries.vue  TimeseriesLegend.vue
frontend/src/infos/: BubbleEvapotranspiration.vue  BubbleLeakage.vue  BubblePrecipitation.vue  BubbleSurfaceRunoff.vue  BubbleWaterStorage.vue  InfoTooltipConservativeScenario.vue  InfoTooltipEvapotranspiration.vue  InfoTooltipLeakage.vue  InfoTooltipMaps.vue  InfoTooltipPrecipitation.vue  InfoTooltipRadicalScenario.vue  InfoTooltipRadicalWaterFluxes.vue  InfoTooltipScatter.vue  InfoTooltipSurfaceRunoff.vue  InfoTooltipTimeseries.vue  InfoTooltipWaterFluxes.vue  (+1 more)
preprocessing/: Dockerfile  Makefile  colorscales_testground.qgs  colorscales_testground.qgs~  copy_data.py  copy_geojsons.py  docker-compose.yml  prepare_colormaps.py  prepare_data.py  prepare_elements.py  prepare_gpkg.py  prepare_summary_fluxes.py  preprocessing.sh  pyproject.toml  readme.md
preprocessing/colorscales/: cmap_Evap.txt  cmap_Evap_v0.txt  cmap_LSrfn.txt  cmap_LSrfo.txt  cmap_PrcL.txt  cmap_PrcL3.txt  cmap_SWCup.txt
utils/: prepare_data.py
(+8 files in other folders)
