[tool.poetry]
name = "wanh"
version = "0.1.0"
description = "ECHO x LAB-U ENAC interdisiplinary Cluster grants 2020"
authors = ["Samuel Bancal <Samuel.Bancal@epfl.ch>"]
license = "TBD"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
