[tool.poetry]
name = "wanh"
version = "0.1.0"
description = "ECHO x LAB-U ENAC interdisiplinary Cluster grants 2020"
authors = ["Samuel Bancal <Samuel.Bancal@epfl.ch>"]
license = "TBD"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.0"
numpy = "^1.22.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^21.12b0"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
